welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:2: error: not found: value Maht
  if ((a<=20 && a>=10) || (b<=20 && b>=10)) {return Maht.max(a,b)}
                                                    ^